k8s_configs/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: client-deployment
spec:
    replicas: 3
    selector:
        matchLabels: 
            component: web
    template:
        metadata: 
            label:
                component: web
        spec: 
            containers:
                - name: client
                  image: naveenauta/multi-client
                  ports: 
                    - containerPort: 3000
