k8s_configs/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: redis-deployment 
spec: 
    replicas: 1
    selector:
        matchLabels: 
            component: redis
    template: 
        metadata:
            component: redis
        spec: 
            containers: 
                - name: redis
                  image: redis
                  ports: 
                    - containerPort: 6379
