k8s_configs/server-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector: 
        matchLabels: 
            component: server
    template:
        metadata:
            labels: 
                component: server
        spec:
            containers:
                - name: server
                  image: naveenauta/multi-server
                  ports: 
                    - containerPort: 5000
