k8s_configs/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: server-cluster-ip-service
spec: 
    type: ClusterIP
    selector:  
        component: service
    ports: 
        - port: 3000
          targetPort: 3000
