k8s_configs/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
    name: ingress-service
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
    rules: 
        - http: 
            paths: 
                -   path: /?(.*)
                    backend: 
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                -   path: /api/?(.*)
                    backend: 
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
